Fix CSS for cards add horizontal scroll and hide null value lis

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,6 +1,8 @@
 body {
   background-image: url('../Utils/Assets/Images/bnr_strike.jpg');
-  background-position: bottom 200px left 0;
+  /*background-position: bottom 200px left 0;*/
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .App {
